# DOCTURA

./: .gitignore  ARCHITECTURE.md  CORPORATE AND INDIGENOUS COLOUR THEMES.docx  DocTura Super Prompt.docx  DocTura-Desktop-Specifications.docx  HANDOVER.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run-simple.ps1  run.ps1  test-pdf.ps1  test_conversion.py
docutura/: __init__.py
docutura/app/: __init__.py  main.py
docutura/app/windows/: __init__.py  main_window.py
docutura/core/: __init__.py  controller.py  csv_writer.py  excel_writer.py  extractor.py  models.py  naming.py  segmentation.py  themes.py  validator.py  word_writer.py
docutura/enterprise/: __init__.py  audit.py
docutura/plugins/: __init__.py  base.py  staff_list.py  waec_marksdist.py
docutura/tests/: __init__.py  test_basic.py
